<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">圆满人生</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="net_work_off">网络未连接</string>
    <string name="neterror">网络未连接</string>
    <string name="servererror">服务器异常</string>
    <string name="seesionerror">访问已失效，请重新打开应用</string>
    <string name="map">地图</string>
    <string name="pdrlocation">派单人地址：</string>

    <string name="maptest_type">地图类型</string>
    <string name="maptest_traffic">交通图</string>
    <string name="main_1">首页</string>
    <string name="main_2">圆满</string>
    <string name="main_3">订单</string>
    <string name="main_4">服务车</string>
    <string name="sign">签到</string>
    <string name="my_1">电话咨询</string>
    <string name="my_2">在线咨询</string>
    <string name="my_3">帮助中心</string>
    <string name="my_4">意见留言</string>
    <string name="my_5">设置</string>

    <string name="tishi_1">
此流程步骤旨在指导、提醒您执行治丧服务。
\n第1步：您点击进入“处理临终现场”，前往治丧现场时，及时填写“治丧地址”，这样便于您后续派单执行。
\n第2步：根据线下执行服务阶段，点击对应的流程按钮，并完成表单信息，进入下一步。
\n第3步：开始出殡前、出殡当天服务时，及时点击“开始服务”，根据流程引导完成表单信息，执行治丧服务。</string>
    <string name="tishi_2">
        【如何派单】
\n第1步：确认家属需要“入殓师”则第一时间派单【入殓师】。
\n第2步：派单入殓师后，确定殡仪馆，并联系殡仪馆接运遗体。
\n第3步：等待遗体接运期间，若客户家中有人留守则申请派单【棚架搭建】。
\n第4步：前往治丧现场时，派单【灵堂装饰】、【消耗用品】、【回礼】。
\n第5步：棚架搭建人员开始操作后，派单【奉灵仪式】。
\n第6步：办理火化手续，前往殡仪馆前30分钟，派单【代办火化手续】。
\n第7步：出殡前一天下午16:00派单【家祭仪式】。
\n第8步：出殡时间前1小时派单【出殡仪式】
\n第9步：到达殡仪馆前30分钟，派单【殡仪馆服务】
\n        【如何评价】
\n第1步：执行商家完成该项目提交审核后，系统开启”评价“按钮。
\n第2步：确认执行商家按公司制定标准完成该项目，点击”评价“。
\n第3步：根据执行的真实情况，点击服务星级，并提交评价页签。
    </string>

    <string name="contract_1" formatted="false">
    5、甲乙双方约定选择以下方式由甲方向乙方支付各项费用：微信扫码支付、POS刷卡支付 、现金支付
        \n6、乙方收到各项费用后将以邮件的形式将支付凭证发送至甲方邮箱，并在甲方支付全部费用后向甲方开具正式发票。
\n第六条 双方的权利和义务
\n1、甲方应按时向乙方支付本合同约定服务事项的费用。
\n2、甲方应积极配合乙方完成合同约定的各项服务。
\n3、甲方应主动告知乙方有关殡葬服务的注意事项。乙方应遵守甲方的民族习俗。
\n4、甲方承诺在被服务过程中损毁乙方租赁物品的，甲方承担赔偿责任。
\n5、甲方承诺，在乙方殡葬服务期间，服务项目处于正在执行状态或派单中的，甲方不得取消或更改对应的服务项目。
\n6、乙方应在殡葬服务结束后，由乙方收款员在向甲方进行收款时提供有效的服务清单（该服务清单系乙方提供殡葬服务过程中经甲方签字确认的服务项目清单）与付费凭证。
\n7、乙方不得扣押死亡证明、领灰证和骨灰盒（含骨灰）等。
\n8、乙方提供的各项服务以及服务中所使用的各种产品，均应符合国家相关规定或行业相关规范确定的要求。
\n9、合同签订后，乙方已为本合同的履行做好准备工作，但因甲方原因致使合同被解除、约定的服务时间节点被推迟的或者服务项目被变更的，甲方应向乙方承担因合同被解除、服务时间被推迟或者服务项目被变更对乙方所造成的全部经济损失的赔偿责任。
\n10、殡葬服务期间，甲方应当严格遵守《客户须知》，并且甲方应对乙方位于服务现场的设施设备等履行善良、合理的保管义务；若因此致使乙方遭受经济损失的，甲方应当承担损害赔偿责任。
\n11、甲方购买圆满人生网站（域名：http://m.e-funeral.com）展示的服务产品与乙方签订本服务合同的，乙方声明圆满人生网站（域名：http://m.e-funeral.com）展示的服务产品与实际提供的服务产品具有一定的效果差异。甲方声明在签订本合同时已确认知晓该类情况。
\n12、合同签订后，甲乙双方必须按照合同的约定履行义务，严禁双方随意解除或终止本合同。
\n第七条 合同有效期
\n1、合同有效期自本合同生效之日起至本合同约定的殡葬服务完成时止。
\n2、本合同有效存续期间，乙方为甲方所提供的服务项目价格有效期仅为一年，且在该价格有效期内，各项服务项目或产品价格不作调整。
\n第八条 违约责任
\n1、甲方应向乙方支付定金的，本合同自定金交付之日起生效；合同生效后，甲方随意解除或终止本合同的，已交付的定金不予退还。
\n2、因甲方原因，甲方于乙方提供具体殡葬服务项目前要求取消该具体服务项目的，应以该具体项目服务费的70%1$作为违约金；于乙方提供具体殡葬服务项目后要求取消该具体服务项目的，应以该具体项目服务费的100%作为违约金；前述违约金不足以弥补乙方所遭受损失的，甲方仍应当承担差额部分的赔偿责任。
\n3、由于甲方原因导致合同不能按照约定履行的，由甲方自行承担相应责任，并应支付乙方实际支出的费用；由于乙方原因导致提供的服务或商品不符合约定要求，给甲方造成损失的，乙方应向甲方赔偿相应损失。
\n4、由于甲方原因给乙方或第三方造成人身伤害或财产损失的，甲方则应自行承担赔偿责任。
\n5、任何一方违约致使本合同终止或解除的，违约方应当向守约方承担损害赔偿责任。
\n6、乙方未提供服务清单和付费凭证的，甲方有权拒付相关服务费用。
\n7、甲方逾期支付相关服务费用的，则应按每逾期一日以应支付款项1%2$向乙方支付违约金。
\n8、乙方人员强制向甲方索要红包的，甲方有权拒付相关费用，经乙方审查是事实的，乙方向甲方赔偿红包金额的10倍。
\n第九条 其他约定
\n1、甲乙双方签订本合同后，需要变更殡葬服务项目内容的，应当按照合同约定，另行签订书面补充协议；本合同未作变更的其他条款仍具有法律效力，双方应当继续执行。因甲方变更殡葬服务项目内容导致乙方经济损失的，甲方应当承担乙方所遭受的合理经济损失的赔偿责任。
\n2、在本合同生效后，甲方在原有服务项目基础上，单独增加或修改服务项目（除治丧主服务）时，不需签订书面补充协议，所产生的服务项目同样具有法律效力。
        \n第十条 争议解决方式
\n双方在本合同履行期间发生争议的，可协商解决；协商不成的，可提请成都仲裁委员会仲裁解决。
\n第十一条 附则
\n1、除本合同另有约定外，本合同自双方签字或盖章之日起生效。
\n2、本合同生效后，双方均不得随意变更或解除合同。如一方需要变更合同，双方需另行签订补充协议确认变更事项,补充协议经双方签字或盖章后生效。如若双方未就变更事项签订补充协议的,提出变更方仍应依本合同约定继续履行，否则视为违约。
\n3、本合同及其附件或补充协议构成双方之间就本合同项下之服务所达成的全部合同内容，并替代双方以前或执行本合同过程中所做的任何口头交流、声明或协议。本合同任何一方均可提出对本合同内容的补充和修订，但是任何补充和修订仅能以协议双方签字或盖章的书面文件形式进行，该类文件是本合同的有效组成部分。
本合同的附件有以下文件资料： 殡葬服务客户须知</string>

    <string-array name="ywlx">
        <item>紧急</item>
        <item>不紧急</item>
    </string-array>
    <string-array name="zsxy">
        <item>佛教</item>
        <item>基督教</item>
        <item>道教</item>
        <item>无信仰</item>
        <item>其它</item>
    </string-array>
    <string-array name="zsfx">
        <item>简办</item>
        <item>常规</item>
        <item>定制</item>
        <item>其他</item>
    </string-array>
    <string-array name="szxz">
        <item>健康</item>
        <item>病危</item>
        <item>去世</item>
    </string-array>

    <string-array name="syxx">
        <item>家属自己准备寿衣</item>
        <item>订单时预留寿衣</item>
        <item>订单时未预留寿衣</item>
        <item>不穿寿衣</item>
        <item>其他</item>
    </string-array>
    <string-array name="qtjg">
        <item>预约二次洽谈</item>
        <item>未预约</item>
    </string-array>

    <string-array name="gx">
        <item>其他</item>
        <item>母亲</item>
        <item>父亲</item>
        <item>哥哥</item>
        <item>姐姐</item>
        <item>弟弟</item>
        <item>妹妹</item>
        <item>儿子</item>
        <item>女儿</item>
        <item>孙子</item>
        <item>孙女</item>
    </string-array>

    <string-array name="isgm">
        <item>未购墓</item>
        <item>已购墓</item>
    </string-array>

    <string-array name="gm_qk">
        <item>单穴</item>
        <item>双穴</item>
        <item>双穴已葬一位</item>
    </string-array>

    <string-array name="pay_my">
        <item>非常满意</item>
        <item>比较满意</item>
        <item>一般</item>
        <item>很差</item>
    </string-array>

    <string-array name="pay_fp">
        <item>纸质</item>
        <item>电子</item>
    </string-array>

    <string-array name="byg_location">
        <item>其他</item>
        <item>东郊殡仪馆</item>
        <item>北郊殡仪馆</item>
        <item>东林殡仪馆</item>
    </string-array>

    <string-array name="fire_deal_way">
        <item>其他</item>
        <item>代办</item>
        <item>陪同办理</item>
    </string-array>

    <string-array name="traffic_way">
        <item>其他</item>
        <item>客户自驾</item>
        <item>公司派车</item>
    </string-array>

    <string-array name="fire_cremator">
        <item>其他</item>
        <item>豪华炉</item>
        <item>普通炉</item>
    </string-array>

    <string-array name="bodies_park">
        <item>单间停放</item>
        <item>集体停放</item>
        <item>其他</item>
    </string-array>

    <string-array name="asl_deal">
        <item>其他</item>
        <item>寄存</item>
        <item>安葬</item>
    </string-array>


    <string-array name="dead_ind">
        <item>其他</item>
        <item>政府</item>
        <item>商界</item>
        <item>一般职工</item>
    </string-array>

    <string-array name="sex">
        <item>未知</item>
        <item>男</item>
        <item>女</item>
        <item>保密</item>
    </string-array>
    <string name="cloud_search_tips"> \t\tLBS.云是百度地图针对LBS开发者推出的平台级服务。结合已有的地图API和SDK服务。通过开放服务端存储和计算能力,提供海量位置数据存储、检索、展示一体化解决方案。\n\n \t\t该服务对开发者免费开放。测试demo里写入了测试的ak。开发者可以使用测试ak查看 LBS.云检索的效果。如果开发者要使用自己的数据，请在申请ak后替换demo中的ak。\n\n \t\t如有任何关于LBS.云服务的问题,诸如如何申请ak、如何存储和检索数据等，请访问百度地图官方“LBS开放平台”。地址：http://lbsyun.baidu.com/ \n </string>
    <string name="title_markercluster_desc">\t\t缩小地图，以显示标注物的聚合点 \n \t\t放大地图，显示Marker点 \n</string>
    <string name="share_tip">\t\t短串分享是指，用户搜索查询后得到的每一个地理位置结果将会对应一条短串（短链接），用户可以通过短信、邮件或第三方分享组件（如微博、微信等）把短串分享给其他用户从而实现地理位置信息的分享。当其他用户收到分享的短串后，点击短串即可打开手机上的百度地图客户端或者手机浏览器进行查看。\n\n \t\t例如，用户搜索“百度大厦”后通过短信使用短串分享功能把该地点分享给好友，好友点击短信中的短串“http://j.map.baidu.com/XLCrk”后可以调起百度地图客户端或者手机浏览器查看“百度大厦”的地理位置信息。\n\n \t\t目前短串分享功能暂时开放了“POI搜索结果分享”、“反向地理编码结果分享”和"路线规划路线结果分享(包含步行、骑行、驾车、公交)"，日后会开放更多的功能，欢迎广大开发者使用短 </string>
    <string name="texturemap_hint">\t\t名称：TextureMapView（实现地图由TextureView 渲染）\n\n \t\t前提：Android 4.0以上系统，并开启加速功能，才能使用TextureMapView \n\n \t\t用法：解决原MapView基于系统GLSurfaceView导致tabhost切换或滚动闪屏、白边等问题</string>
    <string name="tileoverlay_online_urlhint">放入图片URL，点击在线</string>
    <string name="hide_poiinfo">隐藏地图上的poi标注</string>


    <string name="drawer_sign">签到</string>
    <string name="zhy_user_center_help">客服帮助</string>
    <string name="zhy_user_center_collection">我的收藏</string>
    <string name="zhy_user_center_idea">意见反馈</string>
    <string name="zhy_user_center_platform">入驻平台</string>
    <string name="zhy_user_center_version">版本号：</string>
    <string name="zhy_user_center_userinfo">我的资料</string>
    <string name="zhy_user_center_setting">设置</string>
    <string name="zhy_user_center_edit">编辑</string>
    <string name="store_search_hint">请输入您要查找的商品</string>
</resources>