<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_20dp">

            <ImageView
                android:id="@+id/iv_user_pic"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/test_icon" />

            <LinearLayout
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="姓名"
                    android:textColor="@color/blackgroundmain"
                    android:textSize="@dimen/text_size_top_bg" />

                <TextView
                    android:id="@+id/tv_user_zw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="积分:"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_date_list" />


                <Button
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@drawable/bg_button_yellow"
                    android:gravity="center"
                    android:text="@string/sign"
                    android:textSize="@dimen/text_size_date_list" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dimen_20dp"
                    android:text="编辑" />

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_alignBottom="@+id/editor"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:layout_toLeftOf="@+id/editor"
                    android:src="@drawable/button_editor" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_jb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:text="角色："
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_date_list" />

                <TextView
                    android:id="@+id/tv_user_jb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"

                    android:text="星级："
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_date_list" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"

                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_user_fwgs1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="96"
                    android:textColor="@color/blackgroundmain"
                    android:textSize="@dimen/text_size_detail_list" />

                <TextView
                    android:id="@+id/tv_user_fwgs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="成功服务个数"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_date_list" />

                <RatingBar
                    android:id="@+id/tv_user_fwgs2"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_user_fwmy1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="96"
                    android:textColor="@color/blackgroundmain"
                    android:textSize="@dimen/text_size_detail_list" />

                <TextView
                    android:id="@+id/tv_user_fwmy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="服务满意度"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_date_list" />

                <RatingBar
                    android:id="@+id/tv_user_fwmy2"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_15dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/grzy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/grzy"
            android:padding="@dimen/dimen_30dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_top_bg"
            android:visibility="gone" />


        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/text_next"
            android:padding="@dimen/dimen_30dp"
            android:text="@string/my_1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_detail_list" />


        <TextView
            android:id="@+id/tv_zx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/text_next"
            android:padding="@dimen/dimen_30dp"
            android:text="@string/my_2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_detail_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/gray_main_rb_bg_f" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/main_blackground"
            android:drawableRight="@drawable/text_next"
            android:padding="@dimen/dimen_30dp"
            android:text="@string/my_3"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_detail_list" />


        <TextView
            android:id="@+id/ly"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_110dp"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/text_next"
            android:padding="@dimen/dimen_30dp"
            android:text="@string/my_4"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_detail_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/gray_main_rb_bg_f" />

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@drawable/text_next"
            android:padding="@dimen/dimen_30dp"
            android:text="@string/my_5"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_detail_list" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:background="@color/gray_main_rb_bg_f" />
    </LinearLayout>
</LinearLayout>